--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,13 @@ body {
   background: #333;
   color: #bbb;
 }
+
+.scrubber .bar__progress {
+  background: purple;
+}
+.scrubber .bar__thumb {
+  background: #FF00FF;
+}
+.scrubber .bar {
+  background: #888;
+}
