--- a/src/SongItem.scss
+++ b/src/SongItem.scss
@@ -3,6 +3,15 @@
   padding: 0.2rem;
   .meta {
     flex: 1;
+    &.compact div {
+      display: inline-block;
+      &:not(:first-child):not(:last-child) {
+        margin: 0 .2rem;
+      }
+    }
+    &.compact .length {
+      float: right;
+    }
   }
   .albumArt {
     width: auto;
