Make the settings do stuff! (except for the theme setting and the other section)

--- a/src/css/SettingsModal.scss
+++ b/src/css/SettingsModal.scss
@@ -1,4 +1,7 @@
 .settingsModal {
+  .settingsDisclaimer {
+    display: none;
+  }
   .settings {
     .rs-flex-box-grid {
       margin-bottom: 0.6rem;
